--- a/enceinte_socle.html
+++ b/enceinte_socle.html
@@ -23,10 +23,10 @@
   </nav>
   <!-- Fin de la barre de navigation -->
   <div class="product">
-    <img src="img/enceinte3.jpg" alt="Canapé design">
+    <img src="LinkedLoudSpeakers/img/enceinte2.jpg" alt="Canapé moderne">
     <div class="product-info">
-      <h1>Enceinte avec tourne disque</h1>
-      <h2>499€</h2>
+      <h1>Enceinte avec socle</h1>
+      <h2>59€</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque varius efficitur magna vel tristique. Vivamus a posuere diam, in fringilla erat. Praesent vestibulum sollicitudin velit ac lobortis. Vestibulum euismod nulla nec arcu interdum consectetur. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nulla nec finibus lectus. Fusce iaculis malesuada leo, quis aliquet augue pellentesque at. Quisque eleifend orci ut purus pretium cursus. Praesent maximus tempus risus, in rhoncus mauris. Nam placerat venenatis sodales. Donec vulputate arcu in urna molestie scelerisque.<p>
       <button>Ajouter au panier</button>
     </div>
