--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="img/icon form.jpg">
+    <link rel="shortcut icon" href="LinkedLoudSpeakers/img/icon%20form.jpg">
     <title>Formulaire</title>
 </head>
 
