--- a/enceinte_mini.html
+++ b/enceinte_mini.html
@@ -23,7 +23,7 @@
   </nav>
   <!-- Fin de la barre de navigation -->
   <div class="product">
-    <img src="img/enceinte1.jpg" alt="Canapé de luxe">
+    <img src="LinkedLoudSpeakers/img/enceinte1.jpg" alt="Canapé de luxe">
     <div class="product-info">
       <h1>Enceinte mini portable</h1>
       <h2>29€</h2>
