--- a/enceinte_socle.html
+++ b/enceinte_socle.html
@@ -23,7 +23,7 @@
   </nav>
   <!-- Fin de la barre de navigation -->
   <div class="product">
-    <img src="LinkedLoudSpeakers/img/enceinte2.jpg" alt="Canapé moderne">
+    <img src="img/enceinte2.jpg" alt="Canapé moderne">
     <div class="product-info">
       <h1>Enceinte avec socle</h1>
       <h2>59€</h2>
