--- a/inscription.html
+++ b/inscription.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="connexion.css">
-    <link rel="shortcut icon" href="LinkedLoudSpeakers/img/logo.png">
+    <link rel="shortcut icon" href="img/logo.png">
     <!-- Définir le titre de la page -->
     <title>Inscription</title>
     <!-- Lien vers la feuille de style externe -->
