--- a/enceinte_tourne_disque.html
+++ b/enceinte_tourne_disque.html
@@ -23,7 +23,7 @@
   </nav>
   <!-- Fin de la barre de navigation -->
   <div class="product">
-    <img src="LinkedLoudSpeakers/img/enceinte3.jpg" alt="Canapé design">
+    <img src="img/enceinte3.jpg" alt="Canapé design">
     <div class="product-info">
       <h1>Enceinte avec tourne disque</h1>
       <h2>499€</h2>
